--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 .Rproj.user/
 *.csv
 _posts/*/dog_breeds
+docs/posts/2018-12-21-training-a-dog-breeds-image-classifier-using-keras-in-pre-trained-models/dog_breeds/*
